quickstart/multirepo/root/policy_controller(component2)/ns-bad.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-policy-controller5
  labels:
    name: test
