quickstart/multirepo/root/policy_controller(component2)/ns-policy_controller.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-policy-controller4
  labels:
    name: test
