quickstart/multirepo/root/policy_controller(component2)/hello-world-app-dep.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world-app
spec:
  containers:
  - name: app
    image: gcr.io/google-samples/hello-app:1.0
    resources:
      requests:
        memory: "8Mi"
        cpu: "10m"
      limits:
        memory: "64Mi"
        cpu: "50m"
