quickstart/multirepo/root/policy_controller(component2)/pod-hello-world.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world-pod
  labels:
    name1: hello-world

spec:
  containers:
  - name: app
    image: gcr.io/google-samples/hello-app:1.0
    resources:
      requests:
        memory: "8Mi"
        cpu: "20m"
      limits:
        memory: "64Mi"
        cpu: "50m" #if put greater cpu value than limit defined in restriction ex- "60m", this will fail.

#create a svc to access, by exposing this pod
#kubectl expose pod  hello-world-pod --type=LoadBalancer --port=8080 --name=hello-world-svc2 --selector=name1=hello-world
