quickstart/multirepo/root/policy_controller(component2)/constraint-container-restrict-limits.yaml
  
# ns-must-have-geo.yaml

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
  name: constraint-container-limits
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["*"]
  parameters:
    cpu: 60
    memory: 64
