quickstart/multirepo/root/policy_controller(component2)/constraint-ns-restrict-labels.yaml
# ns-must-have-geo.yaml

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictLabels
metadata:
  name: ns-must-have-geo
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    restrictedLabels: ["restrictedlabel"]
