quickstart/multirepo/root/policy_controller(component2)/restrict-ns.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictNamespaces
metadata:
  name: restrict-ns
spec:
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["*"]
  parameters:
    restrictedNamespaces: ["geo6"]
